--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
@@ -28,12 +29,14 @@
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-i18next": "^15.7.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.3"
   },
